Đây là commit 5 xe đắt nhất